<resources>
    <string name="app_name">MSBOX</string>
    <string name="btn_send_text">发送</string>
    <string name="username_hint">输入用户名</string>
    <string name="password_hint">输入密码</string>
    <string name="login_btn">登录</string>
    <string name="username_text_view">用户名：</string>
    <string name="password_text_view">密码：</string>
    <string name="allow_btn">确定</string>
    <string name="alert_title">错误</string>
    <string name="failed_connect">连接远程服务器失败，点击屏幕右上角的云朵尝试重新连接。</string>
    <string name="server_disconnected">远程服务器断开连接</string>
    <string name="login_deny">登录失败</string>
    <string name="error_close">关闭Socket失败</string>
    <string name="exit">下线</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_cast_text">发送广播</string>
    <string name="reconnect">重新连接</string>
    <string name="warning">警告</string>
    <string name="disconnected">我们貌似已经与服务器成功建立了连接</string>
    <string name="server_connect">服务器已连接</string>
    <string name="user_list_title">在线用户列表</string>
    <string name="send_msg">发送消息</string>
    <string name="login_window_title">游客，请登录</string>
    <string name="register_deny">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_text">立即注册</string>
    <string name="register_btn_text">注册？</string>
    <string name="tem_welcome_text">%s，welcome!</string>
</resources>