<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_margin="10dp"
        android:background="@drawable/radius_item_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:padding="30dp"
        android:elevation="5dp"
        android:layout_gravity="center_vertical">
        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:textSize="22sp"
                android:text="@string/username_text_view"/>
            <EditText
                android:textSize="28sp"
                android:id="@+id/username_edit"
                android:hint="@string/username_hint"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/password_text_view"
                android:textSize="22sp"
                android:text="@string/password_text_view"/>
            <EditText
                android:textSize="28sp"
                android:id="@+id/password_edit"
                android:password="true"
                android:hint="@string/password_hint"/>
        </TableRow>
        <Button
            android:id="@+id/register_btn"
            android:textSize="22sp"
            android:background="@drawable/radius"
            android:layout_marginTop="30dp"
            android:text="@string/register_text"></Button>
    </TableLayout>
</FrameLayout>